# megacrypt

./: Cargo.toml  README.md  in.txt
.github/workflows/: release.yml
src/: aead.rs  api.rs  encoding.rs  engine.rs  error.rs  file.rs  kdf.rs  lib.rs  main.rs  protocol.rs  session.rs  stream.rs  types.rs
src/package/: wasm.rs
src/tests/: crypto_entropy.rs  integration_test.rs  mod.rs
